# LLVM

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  lit.cfg  vcpkg.json
include/: expression.h  from_json.h  generate_llvm.h  statement.h
json_examples/: prg1  prg1.json  prg10  prg11  prg12  prg13  prg14  prg15  prg2  prg2.json  prg3  prg3.json  prg4  prg4.json  prg5  prg5.json  prg6  prg6.json  prg7  prg8  prg9
json_examples/array/: array1.json  array2.json
json_examples/common/: square.json
json_examples/constant_prop/: prg10.json  prg11.json  prg12.json  prg13.json  prg14.json  prg15.json  prg7.json  prg8.json  prg9.json
lib/Transforms/: CMakeLists.txt
lib/Transforms/MyBranchElim/: CMakeLists.txt  MyBranchElim.cpp
lib/Transforms/MyCSE/: CMakeLists.txt  MyCSE.cpp  MyLCSE.cpp  MyLCSE.h
lib/Transforms/MyConstantProp/: CMakeLists.txt  MyConstantProp.cpp
lib/Transforms/MyPass/: CMakeLists.txt  MyPass.cpp
llvm_compiled/: input.txt  llvm1.ll  llvm1_expr.ll  llvm1_expr_self_opt.ll  llvm2_expr.ll  llvm3_expr.ll  llvm3_expr_opt.ll  llvm3_expr_self_opt.ll  llvm4_expr.ll  llvm4_expr_opt.ll  llvm4_expr_self_opt.ll  llvm5_expr.ll  llvm5_expr_opt.ll  llvm6_expr.ll  llvm7_expr_self_opt.ll  llvm8_expr_self_opt.ll  llvm_orig.ll
original_programs/: prg1.lang  prg10.lang  prg11.lang  prg12.lang  prg13.lang  prg14.lang  prg15.lang  prg2.lang  prg3.lang  prg4.lang  prg5.lang  prg6.lang  prg7.lang  prg8.lang  prg9.lang
original_programs/array/: array1.lang  array2.lang
original_programs/constant_prop/: prg10.lang  prg11.lang  prg12.lang  prg13.lang  prg14.lang  prg15.lang  prg7.lang  prg8.lang  prg9.lang
src/: expression.cpp  from_json.cpp  generate_llvm.cpp  main.cpp  statement.cpp
test/regression/: llvm_unit.test  run_prg1.test  run_prg4.test  run_prg6.test
test/regression/MyBranchElim/: run_prg1.test  run_prg4.test  run_prg6.test
test/regression/MyConstantProp/: run_prg1.test  run_prg12.test  run_prg4.test  run_prg6.test  run_prg7.test
test/unit/: def_presence_prg4.test  llvm_regression.test  llvm_regression1.test
